[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Dialog/Dialogue.gd" type="Script" id=1]
[ext_resource path="res://Assets/Dialog/dialogue_bg.png" type="Texture" id=2]
[ext_resource path="res://Assets/Menu/Hack-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Menu/Hack-Italic.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Menu/Hack-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Menu/Hack-BoldItalic.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/Dialog/Blop-Mark_DiAngelo-79054334.mp3" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 32
extra_spacing_bottom = 3
font_data = ExtResource( 3 )

[node name="Dialogue" type="Control"]
margin_right = 798.0
margin_bottom = 149.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -386.5
margin_top = -64.0
margin_right = 386.5
margin_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/bold_italics_font = SubResource( 1 )
custom_fonts/italics_font = SubResource( 2 )
custom_fonts/bold_font = SubResource( 3 )
custom_fonts/normal_font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TypeTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="DialogueVoicePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="timeout" from="TypeTimer" to="." method="_on_TypeTimer_timeout"]
